namespace SpellCheckingTool
{
    struct WordTreeDto
    {
        public char[] alphabet;
        public string[] words;
    }
}
