@startuml

top to bottom direction

scale max 8192 width
scale max 8192 height
scale 2

skinparam backgroundColor transparent
skinparam shadowing false

skinparam defaultTextColor #ffffff
skinparam class {
    BackgroundColor transparent
    BorderColor #ffffff
    FontColor #ffffff
}
skinparam package {
    BackgroundColor transparent
    BorderColor #ffffff
    FontColor #ffffff
}
skinparam rectangle {
    BackgroundColor transparent
    BorderColor #ffffff
    FontColor #ffffff
}
skinparam ArrowColor #ffffff
skinparam ArrowFontColor #ffffff




rectangle "Domain" {

interface IWordStorage {
}
class Word {
}
interface IAlphabet {
}
abstract class BaseAlphabet {
}
IAlphabet <|-- BaseAlphabet
class LatinAlphabet {
}
BaseAlphabet <|-- LatinAlphabet
interface IDistanceAlgorithm {
}
class LevenshteinDistanceAlgorithm {
}
IDistanceAlgorithm <|-- LevenshteinDistanceAlgorithm
interface ISuggestionService {
}

}


rectangle "Application" {
interface IExecutableParser {
}
class StatisticSuggestionService {
}

SuggestionServiceBase <|-- StatisticSuggestionService

abstract class SuggestionServiceBase {
}
class SuggestionService {
}
SuggestionServiceBase <|-- SuggestionService

}


rectangle "Infrastructure" {
class WordTree {
}
abstract class ExecutableParser {
}

class LinuxExecutableParser {
}
ExecutableParser <|-- LinuxExecutableParser
class WindowsExecutableParser {
}
ExecutableParser <|-- WindowsExecutableParser
}


SuggestionServiceBase -left-> ISuggestionService
IExecutableParser <-left- ExecutableParser

SuggestionServiceBase -[hidden]right-> IExecutableParser
LinuxExecutableParser -[hidden]up-> WordTree

WordTree -left-> IWordStorage

@enduml